Cleaned up much of the code.

--- a/ipython_notebooks/Download MTA Data.ipynb
+++ b/ipython_notebooks/Download MTA Data.ipynb
@@ -2,44 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import re\n",
     "import bs4\n",
-    "import requests\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Not used:\n",
-    "import urllib3\n",
     "from urllib.request import urlopen\n",
-    "import html2text"
+    "import requests\n",
+    "import warnings # Turn off warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Grabbing turnstile filenames for the last year from the MTA website\n",
-    "\n",
+    "# Grabs all the links in the mta webpage\n",
     "URL = \"http://web.mta.info/developers/turnstile.html\"\n",
     "soup = bs4.BeautifulSoup(urlopen(URL))\n",
-    "\n",
-    "# Grabs all the links in the mta webpage\n",
     "all_link_list = []\n",
     "for link in soup.findAll('a'):\n",
     "    all_link_list.append(link.get('href'))\n",
-    "\n",
-    "# Dumps only the names for the last year into turnstile_link_list\n",
-    "turnstile_link_list = [all_link_list[36:89][i].replace(\"data/nyct/turnstile/\", \"\") for i in range(len(link_list[36:89]))]"
+    "turnstile_link_list = [all_link_list[36:89][i].replace(\"data/nyct/turnstile/\", \"\") for i in range(len(all_link_list[36:89]))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,22 +41,7 @@
     "# Warning: May take a long time\n",
     "# On my computer, it took about 15 minutes to download all 50 files\n",
     "\n",
-    "for i in range(3, len(turnstile_link_list)):\n",
-    "    url=\"http://web.mta.info/developers/\"+all_link_list[36:89][i] # Defining the webpage link\n",
-    "    r = requests.get(url) # Gets the data\n",
-    "    \n",
-    "    file = open('{}'.format(turnstile_link_list[i]), 'w') # Create empty file and open\n",
-    "    file.write(r.text) # Write the data\n",
-    "    file.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(2, 3):\n",
+    "for i in range(2, len(turnstile_link_list)):\n",
     "    url=\"http://web.mta.info/developers/\"+all_link_list[36:89][i] # Defining the webpage link\n",
     "    r = requests.get(url) # Gets the data\n",
     "    \n",
@@ -214,8 +193,7 @@
     }
    ],
    "source": [
-    "# Testing one of the imports\n",
-    "# This is used at the end after running the pipeline\n",
+    "# Preview one of the imports\n",
     "\n",
     "turnstile_180331_df = pd.read_csv(r\"{}\".format(turnstile_link_list[52]))\n",
     "turnstile_180331_df.head() # Preview"
