--- a/ipython_notebooks/Grab Coordinates.ipynb
+++ b/ipython_notebooks/Grab Coordinates.ipynb
@@ -28,13 +28,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "valuecount_190330_df_08to12 = pd.read_csv(r\"valuecount_190330_df_08to12.csv\") # File import"
+    "valuecount_df = pd.read_csv(r\"ValueCount Data/valuecount_190330_df_08to12.csv\") # File import"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -446,7 +448,7 @@
    ],
    "source": [
     "# Grabbing the latlong data\n",
-    "station_name_index_df = valuecount_190330_df_08to12[['StationName']] # Create new dataframe with station names\n",
+    "station_name_index_df = valuecount_df[['StationName']] # Create new dataframe with station names\n",
     "station_name_index_df['latlong'] =  station_name_index_df.StationName.apply(lambda x: x+' Station, NY') # Creates a column with lat long as search parameter\n",
     "station_name_index_df"
    ]
@@ -877,21 +879,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "station_name_index_df.to_csv(\"latlong.csv\") # Export output to CSV file for easy access"
+    "station_name_index_df.to_csv(r\"Coordinate Data/latlong.csv\") # Export output to CSV file for easy access"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "latlong_df = pd.read_csv(r\"latlong.csv\")"
+    "latlong_df = pd.read_csv(r\"Coordinate Data/latlong.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1359,13 +1361,13 @@
        "[210 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Formatting Stuff\n",
+    "# Formatting\n",
     "latlong_df = latlong_df.drop(columns=\"Unnamed: 0\")\n",
     "latlong_df.latlong = latlong_df.latlong.apply(lambda x : re.sub(\"\\[\", \"\", x)).apply(lambda x : re.sub(\"\\]\", \"\", x)).apply(lambda x : re.sub(\",\", \"\", x)) # Remove brackets and commas\n",
     "latlong_df = latlong_df.join(latlong_df.latlong.str.split(' ', expand = True)) # Split coordinate values into two columns\n",
@@ -1381,9 +1383,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Export output to CSV file for easy access\n",
-    "\n",
-    "latlong_df.to_csv(\"latlong_clean.csv\") # Pipe this back into the main project branch"
+    "latlong_df.to_csv(r\"Coordinate Data/latlong_clean.csv\")"
    ]
   }
  ],
