changing global variable declarations in functions to return statements

--- a/ipython-notebooks/clean-data.ipynb
+++ b/ipython-notebooks/clean-data.ipynb
@@ -11,9 +11,7 @@
     "import datetime as dt\n",
     "from collections import Counter\n",
     "import re\n",
-    "import bs4\n",
-    "from urllib.request import urlopen\n",
-    "import requests\n",
+    "import glob # For opening and closing files\n",
     "import warnings # Turn off warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
@@ -35,8 +33,6 @@
     "    turnstile_csv_df is the dataframe of the imported turnstile.csv file\n",
     "    Warning: Run once per file ONLY. The function will throw an error if run twice on the same file.\n",
     "    \"\"\"\n",
-    "\n",
-    "    global turnstile_df\n",
     "    turnstile_df = turnstile_csv_df\n",
     "    \n",
     "    # Reformatting steps (Warning: May take a few seconds.)\n",
@@ -47,7 +43,8 @@
     "    turnstile_df.DATETIMERAW = turnstile_df.DATETIMERAW.apply(lambda x : dt.datetime.strptime(x, \"%m/%d/%Y%H:%M:%S\")) # Convert DATETIMERAW into datetime object\n",
     "    turnstile_df.TIME = turnstile_df.TIME.apply(lambda x : dt.datetime.strptime(x, \"%H:%M:%S\")) # Convert TIME into datetime object\n",
     "    turnstile_df = turnstile_df.drop(columns = ['DATE']) # Drop DATE column\n",
-    "\n",
+    "    \n",
+    "    return turnstile_df\n",
     "\n",
     "    \n",
     "def valuecount(timestamp1, timestamp2):\n",
@@ -57,7 +54,6 @@
     "    Both timestamp1 and timestamp2 should be datetime objects. Also, timestamp2 should be greater than timestamp1.\n",
     "    This function is not run as a standalone function. It is run within the grabweek() function.\n",
     "    \"\"\"\n",
-    "    global value_count_df\n",
     "    \n",
     "    # Grabbing the data\n",
     "    turnstile_df1 = turnstile_df.loc[turnstile_df['DATETIMERAW'].isin([timestamp1])].reset_index(drop=True) # Grab dataset for timestamp1\n",
@@ -86,13 +82,13 @@
     "    value_count_df.columns = [\"ValueCount\"] # Renaming column to ValueCount\n",
     "    value_count_df = value_count_df.sort_values(by=[\"ValueCount\"], ascending=False) # Sorting by count\n",
     "\n",
+    "    return value_count_df\n",
     "    \n",
     "    \n",
-    "def generate_timestamp_list():\n",
+    "def generate_timestamp_list_edt(turnstile_df):\n",
     "    \"\"\"\n",
     "    This function defines the boundaries of the data pulled. It references turnstile_df, which is the output of format_turnstile_df().\n",
     "    \"\"\" \n",
-    "    global timestamp_list\n",
     "    datetimeraw_count = Counter(turnstile_df['DATETIMERAW'])\n",
     "    \n",
     "    i = 0\n",
@@ -101,13 +97,13 @@
     "        timestamp_list.append(min(datetimeraw_count) + dt.timedelta(hours=4*i))\n",
     "        i += 1\n",
     "\n",
+    "    return timestamp_list\n",
+    "\n",
     "        \n",
-    "        \n",
-    "def generate_timestamp_list_dst():\n",
+    "def generate_timestamp_list_est(turnstile_df):\n",
     "    \"\"\"\n",
     "    This function defines the boundaries of the data pulled. It references turnstile_df, which is the output of format_turnstile_df().\n",
     "    \"\"\" \n",
-    "    global timestamp_list\n",
     "    datetimeraw_count = Counter(turnstile_df['DATETIMERAW'])\n",
     "    \n",
     "    i = 0\n",
@@ -116,44 +112,109 @@
     "        timestamp_list.append(min(datetimeraw_count) + dt.timedelta(hours=4*i+3))\n",
     "        i += 1\n",
     "    \n",
+    "    return timestamp_list\n",
+    "\n",
     "    \n",
-    "    \n",
-    "def grabweek():\n",
+    "def grabweek(timestamp_list):\n",
     "    \"\"\"\n",
     "    This function grabs data for the whole week and enters it into a dataframe\n",
     "    This function references the timestamp_list and calls upon the valuecount() function.\n",
     "    \"\"\"\n",
-    "    global value_count_df_1to2\n",
-    "\n",
-    "    valuecount(timestamp_list[0], timestamp_list[1])\n",
+    "    value_count_df = valuecount(timestamp_list[0], timestamp_list[1])\n",
     "    value_count_df_1to2 = value_count_df[[\"ValueCount\"]]\n",
     "    value_count_df_1to2.columns = [\"{}\".format(timestamp_list[0])]\n",
     "\n",
     "    for j in range(1, len(timestamp_list)-1):\n",
     "        valuecount(timestamp_list[j], timestamp_list[j+1])\n",
     "        value_count_df_1to2 = value_count_df_1to2.join(value_count_df[[\"ValueCount\"]])\n",
-    "        value_count_df_1to2 = value_count_df_1to2.rename(columns={'ValueCount':\"{}\".format(str(timestamp_list[j]))})"
+    "        value_count_df_1to2 = value_count_df_1to2.rename(columns={'ValueCount':\"{}\".format(str(timestamp_list[j]))})\n",
+    "    \n",
+    "    return value_count_df_1to2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['turnstile_190330.txt',\n",
+       " 'turnstile_190323.txt',\n",
+       " 'turnstile_190316.txt',\n",
+       " 'turnstile_190309.txt',\n",
+       " 'turnstile_190302.txt',\n",
+       " 'turnstile_190223.txt',\n",
+       " 'turnstile_190216.txt',\n",
+       " 'turnstile_190209.txt',\n",
+       " 'turnstile_190202.txt',\n",
+       " 'turnstile_190126.txt',\n",
+       " 'turnstile_190119.txt',\n",
+       " 'turnstile_190112.txt',\n",
+       " 'turnstile_190105.txt',\n",
+       " 'turnstile_181229.txt',\n",
+       " 'turnstile_181222.txt',\n",
+       " 'turnstile_181215.txt',\n",
+       " 'turnstile_181208.txt',\n",
+       " 'turnstile_181201.txt',\n",
+       " 'turnstile_181124.txt',\n",
+       " 'turnstile_181117.txt',\n",
+       " 'turnstile_181110.txt',\n",
+       " 'turnstile_181103.txt',\n",
+       " 'turnstile_181027.txt',\n",
+       " 'turnstile_181020.txt',\n",
+       " 'turnstile_181013.txt',\n",
+       " 'turnstile_181006.txt',\n",
+       " 'turnstile_180929.txt',\n",
+       " 'turnstile_180922.txt',\n",
+       " 'turnstile_180915.txt',\n",
+       " 'turnstile_180908.txt',\n",
+       " 'turnstile_180901.txt',\n",
+       " 'turnstile_180825.txt',\n",
+       " 'turnstile_180818.txt',\n",
+       " 'turnstile_180811.txt',\n",
+       " 'turnstile_180804.txt',\n",
+       " 'turnstile_180728.txt',\n",
+       " 'turnstile_180721.txt',\n",
+       " 'turnstile_180714.txt',\n",
+       " 'turnstile_180707.txt',\n",
+       " 'turnstile_180630.txt',\n",
+       " 'turnstile_180623.txt',\n",
+       " 'turnstile_180616.txt',\n",
+       " 'turnstile_180609.txt',\n",
+       " 'turnstile_180602.txt',\n",
+       " 'turnstile_180526.txt',\n",
+       " 'turnstile_180519.txt',\n",
+       " 'turnstile_180512.txt',\n",
+       " 'turnstile_180505.txt',\n",
+       " 'turnstile_180428.txt',\n",
+       " 'turnstile_180421.txt',\n",
+       " 'turnstile_180414.txt',\n",
+       " 'turnstile_180407.txt',\n",
+       " 'turnstile_180331.txt']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Grabs all the links in the mta webpage and collects the names for the last year into turnstile_link_list\n",
-    "URL = \"http://web.mta.info/developers/turnstile.html\"\n",
-    "soup = bs4.BeautifulSoup(urlopen(URL))\n",
-    "all_link_list = []\n",
-    "for link in soup.findAll('a'):\n",
-    "    all_link_list.append(link.get('href'))\n",
-    "turnstile_link_list = [all_link_list[36:89][i].replace(\"data/nyct/turnstile/\", \"\") for i in range(len(all_link_list[36:89]))]"
+    "# Show the files in the folder\n",
+    "files_list = glob.glob(\"data/turnstile/downloads/*\") # Grab a list of filenames\n",
+    "filenames_list = list(map(lambda x: x.replace(\"data/turnstile/downloads/\", \"\"), sorted(files_list, reverse = True)))\n",
+    "filenames_list"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -231,23 +292,19 @@
     }
    ],
    "source": [
-    "# Import latlong_clean.csv, which was exported from a different notebook file.\n",
-    "\n",
-    "latlong_df = pd.read_csv(r\"Coordinate Data/latlong_clean.csv\")\n",
+    "latlong_df = pd.read_csv(r\"data/coordinate/latlong-clean.csv\")\n",
     "latlong_df = latlong_df.drop(columns={\"Unnamed: 0\", \"Numbering\"}) # Dropping the \"Unnamed: 0\" and \"Numbering\" column\n",
     "latlong_df.head() # Preview the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "The following part loops through the turnstile_link_list and outputs the turnstile_YYMMDD_proc.csv files.\n",
+    "The following part loops through the filenames_list and outputs the turnstile_YYMMDD_proc.csv files.\n",
     "\n",
     "Notes:\n",
     "1. Use the \"20190405 Grabbing links from webpage.ipynb\" file to download the turnstile_YYMMDD.txt files from the MTA website \"http://web.mta.info/developers/turnstile.html\"\n",
@@ -259,25 +316,24 @@
     "Warning: This may take a long time! On my computer, it outputs 2-3 files per minute and ran for 20 min+.\n",
     "\"\"\"\n",
     "\n",
-    "for i in turnstile_link_list[25:len(turnstile_link_list)]: # Note, if loop stops, restart at an appropriate lowerbound for range\n",
+    "for i in filenames_list[25:len(filenames_list)]: # Note, if loop stops, restart at an appropriate lowerbound for range\n",
     "\n",
-    "    turnstile_df = pd.read_csv(r\"Turnstile Data/Downloads/{}\".format(i)) # File imports\n",
-    "    format_turnstile_df(turnstile_df) # Warning: Run once per file import ONLY\n",
+    "    turnstile_csv_df = pd.read_csv(r\"data/turnstile/downloads/{}\".format(i)) # File imports\n",
+    "    turnstile_df = format_turnstile_df(turnstile_csv_df) # Warning: Run once per file import ONLY\n",
     "\n",
-    "    generate_timestamp_list() # Generating list of timestamps\n",
-    "    grabweek() # Warning: May take a minute\n",
+    "    timestamp_list = generate_timestamp_list_edt(turnstile_df) # Generating list of timestamps\n",
+    "    value_count_df_1to2 = grabweek(timestamp_list) # Warning: May take a minute\n",
     "    value_count_df_1to2 = value_count_df_1to2.reset_index().rename(columns={\"index\":\"StationName\"})\n",
     "\n",
     "    # Merge coordinate data with value_count data\n",
     "    value_count_df_1to2_with_coord = latlong_df.merge(value_count_df_1to2, on=[\"StationName\"], how='left').reset_index(drop=True)\n",
-    "    value_count_df_1to2_with_coord.head() # Preview the final data\n",
     "\n",
-    "    value_count_df_1to2_with_coord.to_csv(r\"Turnstile Data/Processed CSV/{}_proc.csv\".format(i.replace(\".txt\",\"\")))"
+    "    #value_count_df_1to2_with_coord.to_csv(r\"data/turnstile/processed-csv/{}_proc.csv\".format(i.replace(\".txt\",\"\")))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -285,10 +341,10 @@
     {
      "data": {
       "text/plain": [
-       "'turnstile_181201_proc.csv'"
+       "'turnstile_181110_proc.csv'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,23 +353,20 @@
     "\"\"\"\n",
     "The following is for AFTER running the above loop and downloading as many files as possible\n",
     "\"\"\"\n",
-    "turnstile_proc_list = [turnstile_link_list[i].replace(\".txt\", \"\")+\"_proc.csv\" for i in range(len(turnstile_link_list))]\n",
+    "turnstile_proc_list = [filenames_list[i].replace(\".txt\", \"\")+\"_proc.csv\" for i in range(len(filenames_list))]\n",
     "turnstile_proc_list.pop(2) # Removing 'turnstile_190316_proc.csv' from list\n",
     "turnstile_proc_list.pop(19) # Removing 'turnstile_181110_proc.csv' from list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['turnstile_190330.txt',\n",
-       " 'turnstile_190323.txt',\n",
-       " 'turnstile_190316.txt',\n",
-       " 'turnstile_190309.txt',\n",
+       "['turnstile_190309.txt',\n",
        " 'turnstile_190302.txt',\n",
        " 'turnstile_190223.txt',\n",
        " 'turnstile_190216.txt',\n",
@@ -327,29 +380,32 @@
        " 'turnstile_181222.txt',\n",
        " 'turnstile_181215.txt',\n",
        " 'turnstile_181208.txt',\n",
-       " 'turnstile_181201.txt']"
+       " 'turnstile_181201.txt',\n",
+       " 'turnstile_181124.txt',\n",
+       " 'turnstile_181117.txt',\n",
+       " 'turnstile_181110.txt']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# The following items have a lot of missing values due to daylight savings.\n",
+    "# The following items have a lot of missing values due to being in PST.\n",
     "# See adjustment in generate_timestamp_list function below\n",
-    "turnstile_link_list[3:21]"
+    "filenames_list[3:21]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "This loops through the turnstile_link_list and outputs the turnstile_YYMMDD_proc.csv files.\n",
-    "This segment is just for the dates that are within (the opposite of) DST\n",
+    "This loops through the filenames_list and outputs the turnstile_YYMMDD_proc.csv files.\n",
+    "This segment is just for the dates that are within PST\n",
     "Warning! turnstile_190316.txt, turnstile_181110.txt still cannot be processed correctly and should be removed.\n",
     "\n",
     "Notes:\n",
@@ -361,20 +417,19 @@
     "\n",
     "\"\"\"\n",
     "\n",
-    "for i in turnstile_link_list[3:21]: # Note, if loop stops, restart at an appropriate lowerbound for range\n",
+    "for i in filenames_list[3:21]: # Note, if loop stops, restart at an appropriate lowerbound for range\n",
+    "    \n",
+    "    turnstile_csv_df = pd.read_csv(r\"data/turnstile/downloads/{}\".format(i)) # File imports\n",
+    "    turnstile_df = format_turnstile_df(turnstile_csv_df) # Warning: Run once per file import ONLY\n",
     "\n",
-    "    turnstile_df = pd.read_csv(r\"Turnstile Data/Downloads/{}\".format(i)) # File imports\n",
-    "    format_turnstile_df(turnstile_df) # Warning: Run once per file import ONLY\n",
-    "\n",
-    "    generate_timestamp_list_dst() # Generating list of timestamps\n",
-    "    grabweek() # Warning: May take a minute\n",
+    "    timestamp_list = generate_timestamp_list_est(turnstile_df) # Generating list of timestamps\n",
+    "    value_count_df_1to2 = grabweek(timestamp_list) # Warning: May take a minute \n",
     "    value_count_df_1to2 = value_count_df_1to2.reset_index().rename(columns={\"index\":\"StationName\"})\n",
     "\n",
     "    # Merge coordinate data with value_count data\n",
     "    value_count_df_1to2_with_coord = latlong_df.merge(value_count_df_1to2, on=[\"StationName\"], how='left').reset_index(drop=True)\n",
-    "    value_count_df_1to2_with_coord.head() # Preview the final data\n",
     "\n",
-    "    value_count_df_1to2_with_coord.to_csv(r\"Turnstile Data/Processed CSV/{}_proc.csv\".format(i.replace(\".txt\",\"\")))"
+    "    #value_count_df_1to2_with_coord.to_csv(r\"data/turnstile/processed-csv/{}_proc.csv\".format(i.replace(\".txt\",\"\")))"
    ]
   }
  ],
