renaming file names

--- a/ipython-notebooks/concat-data.ipynb
+++ b/ipython-notebooks/concat-data.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filenames_list = glob.glob(\"Turnstile Data/Processed CSV/*_proc.csv\") # Grab a list of filenames\n",
+    "filenames_list = glob.glob(\"data/turnstile/processed-csv/*_proc.csv\") # Grab a list of filenames\n",
     "filenames_list = sorted(filenames_list)\n",
     "\n",
     "# Separates data into two groups based on timestamps\n",
@@ -442,7 +442,7 @@
     "# Formatting for norm\n",
     "turnstile_proc_norm_form = list(map(lambda x: x.set_index(\"StationName\").drop(columns = {'Unnamed: 0', \"Latitude\", \"Longitude\"}), turnstile_proc_norm))\n",
     "turnstile_proc_norm_form_cat = pd.concat([turnstile_proc_norm_form[i] for i in range(0, len(turnstile_proc_norm_form))], axis=1, sort=False)\n",
-    "turnstile_proc_norm_form_cat.transpose().to_csv(\"Turnstile Data/Concatenated CSV/turnstile_norm_cat.csv\")"
+    "turnstile_proc_norm_form_cat.transpose().to_csv(\"data/turnstile/concat-csv/turnstile-edt-cat.csv\")"
    ]
   },
   {
@@ -454,7 +454,7 @@
     "# Formatting for dst\n",
     "turnstile_proc_dst_form = list(map(lambda x: x.set_index(\"StationName\").drop(columns = {'Unnamed: 0', \"Latitude\", \"Longitude\"}), turnstile_proc_dst))\n",
     "turnstile_proc_dst_form_cat = pd.concat([turnstile_proc_dst_form[i] for i in range(len(turnstile_proc_dst_form))], axis=1, sort=False)\n",
-    "turnstile_proc_dst_form_cat.transpose().to_csv(\"Turnstile Data/Concatenated CSV/turnstile_dst_cat.csv\")"
+    "turnstile_proc_dst_form_cat.transpose().to_csv(\"data/turnstile/concat-csv/turnstile-est-cat.csv\")"
    ]
   }
  ],
