--- a/ipython-notebooks/download-data.ipynb
+++ b/ipython-notebooks/download-data.ipynb
@@ -191,7 +191,7 @@
    ],
    "source": [
     "# Preview one of the imports\n",
-    "turnstile_180331_df = pd.read_csv(r\"{}\".format(turnstile_link_list[52]))\n",
+    "turnstile_180331_df = pd.read_csv(r\"data/turnstile/downloads/{}\".format(turnstile_link_list[52]))\n",
     "turnstile_180331_df.head() # Preview"
    ]
   }
