--- a/ipython-notebooks/gmaps-heatmap.ipynb
+++ b/ipython-notebooks/gmaps-heatmap.ipynb
@@ -25,7 +25,7 @@
     "import gmaps\n",
     "import gmaps.datasets\n",
     "\n",
-    "with open(r'/home/harrisonized/Desktop/gmaps_apikey.txt') as f: # Grab API Key\n",
+    "with open(r'/home/harrisonized/Desktop/.API Keys/gmaps_apikey.txt') as f: # Grab API Key\n",
     "    api_key = f.readline()\n",
     "    f.close\n",
     "    \n",
@@ -34,11 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filenames_list = glob.glob(\"Turnstile Data/Processed CSV/*_proc.csv\") # Grab a list of filenames\n",
+    "filenames_list = glob.glob(\"data/turnstile/processed-csv/*_proc.csv\") # Grab a list of filenames\n",
     "filenames_list = sorted(filenames_list)\n",
     "\n",
     "# Separate into two groups based on timestamps\n",
@@ -2869,7 +2869,7 @@
     }
    ],
    "source": [
-    "tech_hub_locations_df = pd.read_csv(\"Extra Data/TechHubLocations.csv\")\n",
+    "tech_hub_locations_df = pd.read_csv(\"data/extra/tech-hub-locations.csv\")\n",
     "tech_hub_locations_df"
    ]
   },
