--- a/ipython-notebooks/grab-coordinates.ipynb
+++ b/ipython-notebooks/grab-coordinates.ipynb
@@ -14,7 +14,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "import geocoder\n",
-    "with open(r'/home/harrisonized/Desktop/gmaps_apikey.txt') as f: # Grab API Key\n",
+    "with open(r'/home/harrisonized/Desktop/.API Keys/gmaps_apikey.txt') as f: # Grab API Key\n",
     "    api_key = f.readline()\n",
     "    f.close"
    ]
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "valuecount_df = pd.read_csv(r\"ValueCount Data/valuecount_190330_df_08to12.csv\") # File import"
+    "valuecount_df = pd.read_csv(r\"data/value-count/valuecount_190330_df_08to12.csv\") # File import"
    ]
   },
   {
@@ -879,7 +879,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "station_name_index_df.to_csv(r\"Coordinate Data/latlong.csv\")  # Export output to CSV file as a save point, in case data becomes inaccessible"
+    "station_name_index_df.to_csv(r\"data/coordinate/latlong.csv\")  # Export output to CSV file as a save point, in case data becomes inaccessible"
    ]
   },
   {
@@ -888,7 +888,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "latlong_df = pd.read_csv(r\"Coordinate Data/latlong.csv\")"
+    "latlong_df = pd.read_csv(r\"data/coordinate/latlong.csv\")"
    ]
   },
   {
@@ -1385,7 +1385,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "latlong_df.to_csv(r\"Coordinate Data/latlong_clean.csv\")"
+    "latlong_df.to_csv(r\"data/coordinate/latlong-clean.csv\")"
    ]
   }
  ],
