--- a/ipython-notebooks/plot-week-data.ipynb
+++ b/ipython-notebooks/plot-week-data.ipynb
@@ -8861,7 +8861,7 @@
     }
    ],
    "source": [
-    "turnstile_norm = pd.read_csv(r\"Turnstile Data/Concatenated CSV/turnstile_norm_cat.csv\")\n",
+    "turnstile_norm = pd.read_csv(r\"data/turnstile/concat-csv/turnstile-edt-cat.csv\")\n",
     "turnstile_norm = turnstile_norm.rename(columns = {\"Unnamed: 0\" : \"DateTime\"}).set_index(\"DateTime\") # Formatting\n",
     "turnstile_norm # Preview"
    ]
@@ -17706,7 +17706,7 @@
     }
    ],
    "source": [
-    "turnstile_dst = pd.read_csv(r\"Turnstile Data/Concatenated CSV/turnstile_dst_cat.csv\")\n",
+    "turnstile_dst = pd.read_csv(r\"data/turnstile/concat-csv/turnstile-est-cat.csv\")\n",
     "turnstile_dst = turnstile_dst.rename(columns = {\"Unnamed: 0\" : \"DateTime\"}).set_index(\"DateTime\") # formatting\n",
     "turnstile_dst # Preview"
    ]
@@ -17732,7 +17732,7 @@
    "source": [
     "turnstile_norm.iloc[:42, 0:10].plot(ylim = (0, 100000), xticks=None)\n",
     "plt.xticks(rotation=90)\n",
-    "plt.savefig(\"Figures/week_data.png\", bbox_inches=\"tight\")\n",
+    "plt.savefig(\"figures/week-data.png\", bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   }
