minor edits to boilerplates, update readme

--- a/count-people.ipynb
+++ b/count-people.ipynb
@@ -6,18 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import warnings\n",
     "from glob import glob\n",
     "import re\n",
     "import pandas as pd\n",
     "from tqdm.notebook import tqdm\n",
-    "\n",
-    "from functions.utils import preprocess\n",
-    "\n",
-    "warnings.filterwarnings('ignore')\n",
-    "pd.set_option(\"max_rows\", 30)\n",
-    "# pd.set_option(\"max_columns\", None)\n",
-    "# pd.set_option(\"precision\", 3)"
+    "from functions.utils import preprocess"
    ]
   },
   {
