--- a/get-coordinates-from-google.ipynb
+++ b/get-coordinates-from-google.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import warnings\n",
     "from os.path import expanduser\n",
     "import json\n",
     "import pandas as pd\n",
@@ -15,9 +14,7 @@
     "from functions.utils import preprocess\n",
     "\n",
     "with open(expanduser('~/.api/gmaps_apikey.txt')) as f: # Grab API Key\n",
-    "    api_key = f.readline()\n",
-    "\n",
-    "warnings.filterwarnings('ignore')"
+    "    api_key = f.readline()"
    ]
   },
   {
