--- a/plot-counts.ipynb
+++ b/plot-counts.ipynb
@@ -7,15 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "import warnings # Turn off warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
-    "# Pandas options\n",
-    "pd.set_option(\"max_rows\", 30)\n",
-    "pd.set_option(\"max_columns\", None)\n",
-    "pd.set_option(\"precision\", 3)"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
