--- a/count-people.ipynb
+++ b/count-people.ipynb
@@ -10,7 +10,7 @@
     "import re\n",
     "import pandas as pd\n",
     "from tqdm.notebook import tqdm\n",
-    "from functions.utils import preprocess"
+    "from functions.data import preprocess"
    ]
   },
   {
