--- a/get-coordinates-from-google.ipynb
+++ b/get-coordinates-from-google.ipynb
@@ -10,8 +10,7 @@
     "import json\n",
     "import pandas as pd\n",
     "import geocoder\n",
-    "\n",
-    "from functions.utils import preprocess\n",
+    "from functions.data import preprocess\n",
     "\n",
     "with open(expanduser('~/.api/gmaps_apikey.txt')) as f: # Grab API Key\n",
     "    api_key = f.readline()"
